--- a/KBFinder/res/values/strings.xml
+++ b/KBFinder/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
 	<string name="app_name">KBFinder</string>
 	<string name="action_settings">Settings</string>
+	<string name="bt_not_availabe">Bluetooth is not available</string>
+	<string name="bt_not_enabled">Bluetooth is not enabled</string>
 </resources>
