--- a/KBFinder/res/values/strings.xml
+++ b/KBFinder/res/values/strings.xml
@@ -4,5 +4,6 @@
 	<string name="action_settings">Settings</string>
 	<string name="bt_not_availabe">Bluetooth is not available</string>
 	<string name="bt_not_enabled">Bluetooth is not enabled</string>
-	<string name="button_scan">Scan KBsound devices</string>
+	<string name="a2dp_connected">A2dp Connected</string>
+	<string name="a2dp_disconnected">A2dp Disconnected</string>
 </resources>
