--- a/KBFinder/res/values-es/strings.xml
+++ b/KBFinder/res/values-es/strings.xml
@@ -6,4 +6,5 @@
 	<string name="bt_not_enabled">Bluetooth no habilitado</string>
 	<string name="a2dp_connected">A2dp Conectado</string>
 	<string name="a2dp_disconnected">A2dp Desconectado</string>
+		<string name="device_not_availabe">Dispositivo no disponible</string>	
 </resources>
