--- a/KBFinder/res/values/strings.xml
+++ b/KBFinder/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="app_name">KBFinder</string>
-	<string name="action_settings">Settings</string>
+	<string name="clear_memories">Clear memories</string>
 	<string name="bt_not_availabe">Bluetooth is not available</string>
 	<string name="bt_not_enabled">Bluetooth is not enabled</string>
 	<string name="a2dp_connected">A2dp Connected</string>
@@ -9,4 +9,5 @@
 	<string name="device_not_availabe">Device not available</string>	
 	<string name="fm_dial">FM Dial</string>	
 	<string name="mem_dial">Memories</string>	
+	<string name="are_you_sure">Are you sure?</string>	
 </resources>
